fix: use fr units rather than % to avoid horizontal scrolling overflow

--- a/themes/detour/assets/css/critical.css
+++ b/themes/detour/assets/css/critical.css
@@ -229,13 +229,13 @@ ul {
 
 @media (min-width: 36rem) {
   .grid {
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 56rem) {
   .grid {
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 1fr 1fr 1fr;
     max-width: 2280px;
   }
 }
